--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,9 @@
           />
           <button class="search-btn" type="submit">Search</button>
         </form>
+
         <ul class="gallery js-gallery"></ul>
+        <span class="loader is-hidden">Loading...</span>
       </div>
     </section>
 
