--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
         </form>
 
         <ul class="gallery js-gallery"></ul>
-        <span class="loader is-hidden">Loading...</span>
+        <div class="loader is-hidden">Loading...</div>
       </div>
     </section>
 
