--- a/src/index.html
+++ b/src/index.html
@@ -19,9 +19,8 @@
           />
           <button class="search-btn" type="submit">Search</button>
         </form>
-
+        <div class="loader is-hidden"></div>
         <ul class="gallery js-gallery"></ul>
-        <div class="loader is-hidden">Loading...</div>
       </div>
     </section>
 
